src/objects/SomDig_IaNummer__c.object
<CustomObject>
    <description>Zuordnung von Innenauftragsnumer (IA) zu den ausschlaggebenden Objekten zur Erstellung der Erlösaufteilung (EA) und Hochrechnung für den Fastclose notwendig</description>
    <fields>
        <fullName>SomDig_BeschreibungCO__c</fullName>
        <description>Wie wird diese IA Nummer von Controlling benannt?</description>
        <inlineHelpText>Wie wird diese IA Nummer von Controlling benannt?</inlineHelpText>
        <label>Beschreibung CO</label>
        <length>56</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_CSPartnerID__c</fullName>
        <description>Content Syndication Partner-ID.</description>
        <inlineHelpText>Content Syndication Partner-ID.</inlineHelpText>
        <label>CSPartnerID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattung__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mediagattung</label>
        <referenceTo>SomDig_Mediagattung__c</referenceTo>
        <relationshipLabel>IA Nummer</relationshipLabel>
        <relationshipName>IA_Nummer</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsDifferenzierung__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mediagattungs-Differenzierung</label>
        <referenceTo>SomDig_MediagattungsDifferenzierung__c</referenceTo>
        <relationshipLabel>IA Nummer</relationshipLabel>
        <relationshipName>IA_Nummer</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsSegment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mediagattungs-Segment</label>
        <referenceTo>SomDig_MediagattungsSegment__c</referenceTo>
        <relationshipLabel>IA Nummer</relationshipLabel>
        <relationshipName>IA_Nummer</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>kombinierter Schlüssel, der Eindeutigkeit sicherstellt</description>
        <inlineHelpText>kombinierter Schlüssel, der Eindeutigkeit sicherstellt</inlineHelpText>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_Werbetraergergruppierung__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Werbeträger Gruppierung sind vormals als Marke bekannt und fassen mehrere Werbeträger zusammen, Grundlage für die Zuordnung von IA Nummern und Werbeträgern. 
Möglichkeit Werbeträger zu gruppieren um Marken abzubilden. 
Beispiel Werbeträger Sixx besteht aus vielen kleinen Seiten bzw. Werbeträgern, diese werden unter der Marke Sixx zusammengefasst.</description>
        <inlineHelpText>Werbeträger Gruppierung sind vormals als Marke bekannt und fassen mehrere Werbeträger zusammen,Grundlage für die Zuordnung von IA Nummern &amp; Werbeträgern. 
Möglichkeit Werbeträger zu gruppieren um Marken abzubilden.</inlineHelpText>
        <label>Werbeträgergruppierung</label>
        <referenceTo>SomDig_Werbetraegergruppierung__c</referenceTo>
        <relationshipLabel>IA Nummern</relationshipLabel>
        <relationshipName>IA_Nummern</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Som_SachkontokonzernintereneVerrechnung__c</fullName>
        <description>Wenn es sich um einen extern vermarkteten Mandanten handelt werden die Umsätze auf ein anderes Sach-/Erlöskonto verbucht dieses ist hier einzugeben.</description>
        <inlineHelpText>Wenn es sich um einen extern vermarkteten Mandanten handelt werden die Umsätze auf ein anderes Sach-/Erlöskonto verbucht dieses ist hier einzugeben. Dies ist wichtig für die SAP schnittstelle.</inlineHelpText>
        <label>Sachkonto konzerninterene Verrechnung</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IA Nummer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Mediagattung__c</columns>
        <columns>SomDig_MediagattungsSegment__c</columns>
        <columns>SomDig_MediagattungsDifferenzierung__c</columns>
        <columns>SomDig_Werbetraergergruppierung__c</columns>
        <columns>SomDig_BeschreibungCO__c</columns>
        <columns>Som_SachkontokonzernintereneVerrechnung__c</columns>
        <columns>SomDig_CSPartnerID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>IA Nummer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IA Nummern</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>